force-app/main/default/objects/Business_Request__c/Business_Request__c.object-meta.xml
<CustomObject>
    <label>Business Request</label>
    <nameField>
        <label>BR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>