force-app/main/default/objects/Business_Request__c/fields/Backlog_Item_Spawned__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item_Spawned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Backlog Item that was spawned as a result of the approval of this business request.</inlineHelpText>
    <label>Backlog Item Spawned</label>
    <referenceTo>CM_Backlog_Item__c</referenceTo>
    <relationshipLabel>Business Requests</relationshipLabel>
    <relationshipName>Business_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>