force-app/main/default/objects/Business_Request__c/fields/BR_ID__c.field-meta.xml
<CustomField>
    <fullName>BR_ID__c</fullName>
    <displayFormat>BR-{0000}</displayFormat>
    <inlineHelpText>An automatic number generated when the request is created to uniquely identify the record.</inlineHelpText>
    <label>BR ID</label>
    <type>AutoNumber</type>
</CustomField>