force-app/main/default/objects/Business_Request__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>The category that represents  the benefit of the business request.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>IE Requests</fullName>
            </value>
            <value>
                <fullName>Member Experience</fullName>
            </value>
            <value>
                <fullName>Membership Project</fullName>
            </value>
            <value>
                <fullName>New Functionality</fullName>
            </value>
            <value>
                <fullName>New Products</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>UI/UX</fullName>
            </value>
            <value>
                <fullName>Workflow Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>