force-app/main/default/objects/Business_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>The crux of the business request.  Enough information to adequately define your objectives and start a meaningful conversation on the request.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>