force-app/main/default/objects/Business_Request__c/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <inlineHelpText>Manually updated field showing the implementation status of a business request.</inlineHelpText>
    <label>Implementation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
            <value>
                <fullName>Implemented - Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>