force-app/main/default/objects/Business_Request__c/fields/Membership_Experience_Value__c.field-meta.xml
<CustomField>
    <fullName>Membership_Experience_Value__c</fullName>
    <inlineHelpText>How will implementing this request improve the member experience?</inlineHelpText>
    <label>Member Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>