force-app/main/default/objects/Business_Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>High (Must Have), Medium (Needed but can wait for few Sprints), Low (Nice to have)</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1) High</fullName>
            </value>
            <value>
                <fullName>2) Medium</fullName>
            </value>
            <value>
                <fullName>3) Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>