force-app/main/default/objects/Business_Request__c/fields/Requested_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Implementation_Date__c</fullName>
    <inlineHelpText>The exact or approximate date you want this request fulfilled.</inlineHelpText>
    <label>Requested Implementation Date</label>
    <type>Date</type>
</CustomField>