force-app/main/default/objects/Business_Request__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>BR_ID__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Category__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Requested_Implementation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved by Business</value>
    </filters>
    <label>Approved</label>
</ListView>